@@ -1,4 +1,3 @@
-
 /*
  ************************************************************************
  *******************  CANADIAN ASTRONOMY DATA CENTRE  *******************
@@ -69,9 +68,16 @@
 
 package org.opencadc.tap.impl;
 
-import ca.nrc.cadc.dali.tables.TableWriter;
-import ca.nrc.cadc.tap.ResultStore;
-import ca.nrc.cadc.uws.Job;
+import java.io.IOException;
+import java.io.OutputStream;
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URL;
+import java.nio.channels.Channels;
+import java.sql.ResultSet;
+
+import org.apache.solr.s3.S3OutputStream;
 
 import com.google.cloud.storage.Blob;
 import com.google.cloud.storage.BlobId;
@@ -79,28 +85,26 @@ import com.google.cloud.storage.BlobInfo;
 import com.google.cloud.storage.Storage;
 import com.google.cloud.storage.StorageOptions;
 
-import java.io.File;
-import java.io.OutputStream;
-import java.io.IOException;
-import java.nio.channels.Channels;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.sql.ResultSet;
-import java.util.Properties;
-
-import static java.nio.charset.StandardCharsets.UTF_8;
+import ca.nrc.cadc.dali.tables.TableWriter;
+import ca.nrc.cadc.tap.ResultStore;
+import ca.nrc.cadc.uws.Job;
+import software.amazon.awssdk.regions.Region;
+import software.amazon.awssdk.services.s3.S3Client;
+import software.amazon.awssdk.services.s3.S3Configuration;
 
 public class ResultStoreImpl implements ResultStore {
     private String filename;
     private static final String bucket = System.getProperty("gcs_bucket");
     private static final String bucketURL = System.getProperty("gcs_bucket_url");
+    private static final String bucketType = System.getProperty("gcs_bucket_type");
 
 
     @Override
     public URL put(final ResultSet resultSet,
                    final TableWriter<ResultSet> resultSetTableWriter)
         throws IOException {
-        OutputStream os = getOutputStream();
+        OutputStream os;
+        os = getOutputStream();
         resultSetTableWriter.write(resultSet, os);
         os.close();
         return getURL();
@@ -109,7 +113,8 @@ public class ResultStoreImpl implements ResultStore {
     @Override
     public URL put(Throwable throwable, TableWriter tableWriter)
         throws IOException {
-        OutputStream os = getOutputStream();
+        OutputStream os;
+        os = getOutputStream();
         tableWriter.write(throwable, os);
         os.close();
         return getURL();
@@ -119,7 +124,8 @@ public class ResultStoreImpl implements ResultStore {
     public URL put(final ResultSet resultSet,
                    final TableWriter<ResultSet> resultSetTableWriter,
                    final Integer integer) throws IOException {
-        OutputStream os = getOutputStream();
+        OutputStream os;
+        os = getOutputStream();
 
         if (integer == null) {
             resultSetTableWriter.write(resultSet, os);
@@ -128,11 +134,33 @@ public class ResultStoreImpl implements ResultStore {
         }
 
         os.close();
-
         return getURL();
     }
 
     private OutputStream getOutputStream() {
+        if (bucketType.equals(new String("S3"))) {
+            return getOutputStreamS3();
+        } else{
+            return getOutputStreamGCS();
+        }
+    }
+
+    private OutputStream getOutputStreamS3() {
+        S3Configuration config = S3Configuration.builder()
+            .pathStyleAccessEnabled(true)
+            .useArnRegionEnabled(true)
+            .build();
+
+        S3Client s3Client = S3Client.builder()
+            .endpointOverride(getURI())
+            .serviceConfiguration(config)
+            .region(Region.US_WEST_2)
+            .build();
+
+        return new S3OutputStream(s3Client, filename, bucket);
+    }
+
+    private OutputStream getOutputStreamGCS() {
         Storage storage = StorageOptions.getDefaultInstance().getService();
         BlobId blobId = BlobId.of(bucket, filename);
         BlobInfo blobInfo = BlobInfo.newBuilder(blobId).setContentType("application/x-votable+xml").build();
@@ -141,8 +169,22 @@ public class ResultStoreImpl implements ResultStore {
     }
 
     private URL getURL() throws MalformedURLException {
-        URL bucket = new URL(bucketURL);
-        return new URL(bucket, filename);
+        if (bucketType.equals(new String("S3"))) {
+            return new URL(new URL(bucketURL), bucket+"/"+filename);
+        } else {
+            return new URL(new URL(bucketURL), filename);
+        }
+    }
+
+    private URI getURI() {
+        try {
+            return new URI(bucketURL);
+        } catch (URISyntaxException e) {
+            // Raise an unchecked exception here to avoid having to change
+            // method definitions.  This reflects an error in the TAP server
+            // configuration and is realistically unrecoverable.
+            throw new IllegalArgumentException(e);
+        }
     }
 
     @Override
